--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 body{
-    background-image: linear-gradient(45deg,red,pink);
+    background-color: black;
+    height: 100vh;
+}
+
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    font-size: 1.5rem;
 }
