--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 body{
     background-color: black;
     height: 100vh;
-}
-
-.header{
     display: flex;
     justify-content: center;
     align-items: center;
-    color:white;
+}
+
+.header{
+   text-align: center;
+    color:rgb(0, 0, 0);
     font-size: 1.5rem;
+    background-color: rgba(255, 255, 255, 0.685);
+    height: 90vh;
+    width: 80%;
+    border-radius: 5%;
 }
