--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-image: linear-gradient(45deg,rgb(0, 255, 149),rgb(241, 0, 0));
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -8,10 +8,26 @@ body{
 
 .header{
    text-align: center;
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     font-size: 1.5rem;
-    background-color: rgba(255, 255, 255, 0.685);
-    height: 90vh;
+    background-color: black;
+    height: auto;
     width: 80%;
     border-radius: 5%;
+    border: solid 5px rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+.header hr{
+    width: 80%;
+}
+
+.rules{
+    height: auto;
+    width: 50%;
+    text-align: center;
+}
+
